# PulindGadhia

./: .gitignore  README.md  main.py  profile.toml  pyproject.toml
.cache/: user_PulindGadhia.pkl  user_benchmark.pkl
.github/workflows/: ci.yml  generate.yml  snake.yml
data/: contributions.json
docs/: v3_documentation.md
scripts/: benchmark.py  fetch_contributions.py  main.py  make_ascii_svg.py  make_info_card.py  prep_photo.py  render_heatmap_svg.py  requirements.txt
scripts/common/: config.py  exceptions.py  file_utils.py  logger.py
src/github_profiler/: __init__.py
src/github_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/github_profiler/application/: config_manager.py  dashboard_orchestrator.py  event_bus.py  layout_engine.py  orchestrator.py  plugin_manager.py
src/github_profiler/application/plugins/: ascii_portrait.py  heatmap.py  (+1 more)
src/github_profiler/domain/: components.py  events.py  geometry.py  interfaces.py  layout.py  models.py  theme.py
src/github_profiler/infrastructure/: cache.py  dashboard_layout.py  dashboard_renderer.py  graphql_client.py  plugin_loader.py  rendering.py  svg_builder.py
src/github_profiler/presentation/: cli.py
tests/: test_application_v2.py  test_dashboard_layout.py  test_dashboard_renderer.py  test_domain.py  test_infrastructure_v2.py  test_presentation_v2.py  test_svg_builder.py  test_svg_engine.py
tests/application/: test_dashboard_integration.py  test_dashboard_orchestrator.py
tests/plugins/: test_ascii_portrait.py  test_heatmap.py  test_neofetch.py
